[package]
name = "load"
version = "0.1.0"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache = { path = "../cache" }
runtime = { path = "../runtime" }
tokio = { version = "1.3", features = ["full"] }
