[package]
name = "runtime"
version = "0.1.0"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.13.0"
hwloc = "0.5.0"
